# Image-editor

./: CMakeLists.txt  README.md  readme.txt
src/: CMakeLists.txt  EditorWindow.cpp  EditorWindow.hpp  EditorWindow.ui  Filter.cpp  Filter.hpp  FilterDialog.cpp  FilterDialog.hpp  FilterDialog.ui  ImageEditor.pro  ImageScene.cpp  ImageScene.hpp  ImageShowArea.cpp  ImageShowArea.hpp  Processing.cpp  Processing.hpp  RotateDialog.cpp  RotateDialog.hpp  RotateDialog.ui  ScaleDialog.cpp  ScaleDialog.hpp  ScaleDialog.ui  UnsharpDialog.cpp  UnsharpDialog.hpp  UnsharpDialog.ui  WavesDialog.cpp  WavesDialog.hpp  WavesDialog.ui  editor.cpp  iface.ui  main.cpp
